<resources>
    <string name="login_title">Prijava</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="prijavi_se_tukaj">Prijavi se tukaj</string>
    <string name="odjavi_se">Odjava</string>
    <string name="go_to_register_text">Nimaš računa? Registriraj se tukaj</string>
    <string name="nazaj_v_app">Nazaj v aplikacijo</string>

    <string name="register_title">Registracija</string>
    <string name="registriraj_se">Registriraj se</string>
    <string name="go_to_login_text">Že imaš račun? Prijavi se tukaj</string>


    <string name="emailHint">E-pošta</string>
    <string name="passwordHint">Geslo</string>
    <string name="nameHint">Ime</string>
    <string name="surnameHint">Priimek</string>


    <string name="app_name">PametniPaketnik</string>
    <string name="zgodovina_paketnika">ZGODOVINA PAKETNIKA</string>
    <string name="vse">Vse</string>
    <string name="uspesno">Uspešno</string>
    <string name="neuspesno">Neuspešno</string>
    <string name="danes">Danes</string>
    <string name="open_the_box">OPEN THE BOX</string>
    <string name="stevilka_paketnika">Številka paketnika</string>
    <string name="settings_title">NASTAVITVE</string>
    <string name="profile_info_title">Profil</string>
    <string name="profile_name_value">Ime: %1$s</string>
    <string name="profile_role_value">Vloga: %1$s</string>
    <string name="profile_surname_value">Priimek: %1$s</string>
    <string name="profile_email_value">E-pošta: %1$s</string>
    <string name="profile_unknown_value">Ni podatka</string>
    <string name="select_language_text">Izbira jezika / Select Language</string>
    <string name="language_hint">Jezik / Language</string>
    <string name="put_face_in_frame_text">Postavi obraz v okvir</string>
    <string name="zajemi_sliko_description">Zajemi sliko</string>
    <string name="prijava_z_obrazom">Prijava z obrazom</string>
    <string name="settings">Nastavitve</string>
    <string name="login">LOGIN</string>
    <string name="go_to_register_full">Nimaš računa? %1$s</string>
    <string name="go_to_register_link">Registriraj se tukaj</string>
    <string name="go_to_login_full">Že imaš račun? %1$s</string>
    <string name="go_to_login_link">Prijavi se tukaj</string>
    <string name="nazaj">Nazaj</string>
    <string name="domov">Domov</string>
    <string name="smart_flower_locker">Smart Flower Locker</string>
    <string name="moja_narocila">moja naročila</string>
    <string name="nastavi_face_id">Nastavi Face ID</string>
    <string name="narocilo">Naročilo: #%1$s</string>
    <string name="lokacija">Lokacija: %1$s</string>
    <string name="status">Status: %1$s</string>
    <string name="odprto">Odprto</string>
    <string name="ni_bilo_odprto">Ni bilo odprto</string>
    <string name="today">TODAY</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="older_orders">OLDER ORDERS</string>

</resources>