<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_page_background"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:id="@+id/historyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="55dp">

        <TextView
            android:text="@string/zgodovina_paketnika"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/history_text_primary"
            android:textStyle="bold"
            android:letterSpacing="0.2"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="22dp" >

            <TextView
                android:id="@+id/tabVse"
                android:text="@string/vse"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/history_text_primary"
                android:gravity="center" />

            <TextView
                android:id="@+id/tabUspesno"
                android:text="@string/uspesno"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/history_text_secondary"
                android:gravity="center" />

            <TextView
                android:id="@+id/tabNeuspesno"
                android:text="@string/neuspesno"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/history_text_secondary"
                android:gravity="center" />

            <TextView
                android:id="@+id/tabDanes"
                android:text="@string/danes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/history_text_secondary"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/historyLayout"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_back_black"
        app:tint="@color/background"
        app:backgroundTint="@color/history_text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:fabSize="normal" />
</androidx.constraintlayout.widget.ConstraintLayout>