<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!--  Kamera preview (v ozadju) -->
    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--  Vodilo za obraz (Overlay) - to se ne zajame na sliko! -->
    <View
        android:id="@+id/face_guideline"
        android:layout_width="280dp"
        android:layout_height="380dp"
        android:background="@drawable/face_guideline_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_face_in_frame_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/face_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Gumb za zajem -->
    <ImageButton
        android:id="@+id/btn_capture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_camera_black"
        android:contentDescription="@string/zajemi_sliko_description"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:tint="@color/history_text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40dp" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/nazaj"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/history_text_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>